[gd_scene load_steps=9 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/UIResource/uipack_fixed/Font/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD/GamingHud.gd" type="Script" id=3]
[ext_resource path="res://HUD/StartMenu.gd" type="Script" id=4]
[ext_resource path="res://HUD/GameMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GamingHud" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="StartMenu" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="StartButton" type="Button" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -42.5
margin_right = 154.0
margin_bottom = 42.5
custom_fonts/font = SubResource( 8 )
text = " START"
icon_align = 1

[node name="ScoreLabel" type="Label" parent="StartMenu"]
margin_right = 69.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 6 )
text = " 0"
align = 1

[node name="Message" type="Label" parent="StartMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -235.5
margin_right = 235.5
margin_bottom = 82.0
custom_fonts/font = SubResource( 7 )
text = "message"
align = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="StartMenu"]

[node name="GameMenu" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_StartButton_pressed"]
